# Vulkan-Quarantine-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Mesh.cpp  Mesh.h  MeshModel.cpp  MeshModel.h  README.md  Utilities.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanValidation.h  index.md  main.cpp
.github/workflows/: build.yml  publish-engine-feed.yml  publish-launcher.yml  wiki.yml
Engine/: .gitignore  QuarantineEngine.sln
Engine/.github/workflows/: build.yml
Engine/Linking/SPIRV-Reflect/: spirv-reflect-static.lib  spirv_reflect.h
Engine/Linking/meshoptimizer/: meshoptimizer.lib
Engine/Linking/tinyobjloader/: tiny_obj_loader.h
Engine/QuarantineEngine/: App.cpp  App.h  GUIWindow.cpp  PhysicBody.cpp  QuarantineEngine.vcxproj  QuarantineEngine.vcxproj.filters  imgui.ini  main.cpp
Engine/QuarantineEngine/App/: App.cpp  App.h
Engine/QuarantineEngine/Data/: QEProjectManager.cpp  QEProjectManager.h  QESceneExporter.cpp  QESceneExporter.h
Engine/QuarantineEngine/Draw/: CommandPoolModule.cpp  CommandPoolModule.h  FrameBufferModule.cpp  FrameBufferModule.h  RenderPassModule.cpp  RenderPassModule.h  SyncTool.h  SynchronizationModule.cpp  SynchronizationModule.h
Engine/QuarantineEngine/Editor/: EditorObject.h  EditorObjectManager.cpp  EditorObjectManager.h  Grid.cpp  Grid.h
Engine/QuarantineEngine/GUI/: GUIWindow.cpp  GUIWindow.h  SceneWindow.cpp  SceneWindow.h
Engine/QuarantineEngine/Geometry/: GeometryModule.cpp  GeometryModule.h
Engine/QuarantineEngine/GraphicsPipeline/: ComputePipelineManager.cpp  ComputePipelineManager.h  ComputePipelineModule.cpp  ComputePipelineModule.h  GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsPipelineBase.cpp  GraphicsPipelineBase.h  GraphicsPipelineData.h  GraphicsPipelineManager.cpp  GraphicsPipelineManager.h  GraphicsPipelineModule.cpp  GraphicsPipelineModule.h  MeshPipelineTest.cpp  MeshPipelineTest.h  PipelineModule.cpp  PipelineModule.h  ReflectShader.cpp  ReflectShader.h  RenderLayer.h  RenderLayerModule.cpp  RenderLayerModule.h  ShaderModule.cpp  ShaderModule.h  ShadowMappingMode.h  ShadowPipelineManager.cpp  ShadowPipelineManager.h  ShadowPipelineModule.cpp  ShadowPipelineModule.h  spirv_reflect.c
Engine/QuarantineEngine/Input/: KeyboardController.cpp  KeyboardController.h
Engine/QuarantineEngine/Memory/: BufferManageModule.cpp  BufferManageModule.h  CSMDescriptorsManager.cpp  CSMDescriptorsManager.h  CSMResources.cpp  CSMResources.h  ComputeDescriptorBuffer.cpp  ComputeDescriptorBuffer.h  ComputeDescriptorModule.cpp  ComputeDescriptorModule.h  DescriptorBuffer.cpp  DescriptorBuffer.h  DescriptorLayout.cpp  DescriptorLayout.h  DescriptorModule.cpp  DescriptorModule.h  UBO.cpp  (+10 more)
Engine/src/: main.cpp
QELauncher/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  QELauncher.csproj  QELauncher.sln
QEProjects/QEExample/: QEExample.sln
Quarantine Engine/: CMakeLists.txt
Quarantine Engine/include/: VulkanLayerAndExtension.cpp
Quarantine Engine/source/: VulkanLayerAndExtension.cpp
Shaders/: compile_shader.bat  frag.spv  second.frag  second.vert  second_frag.spv  shader.frag  shader.vert  vert.spv
backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.h
docs/wiki/: README.md
resources/editor/: imgui_default.ini
resources/models/: Sphere.stl
resources/shaders/: animation.bat  atmosphere.bat  compile.bat  compute.bat  debug.bat  default.bat  example.frag  example.vert  frag.spv  grid.bat  mesh.bat  particles.bat  shadow.bat  vert.spv
setup/: build.ps1  package-engine.ps1  package-launcher.ps1
setup/installer/: QuarantineLauncher.iss
src/: TestComponent.cpp  TestComponent.h  main.cpp
src/App/: App.cpp  App.h  QEBaseApp.cpp  QEBaseApp.h  QEEditorApp.cpp  QEEditorApp.h
src/Data/: AnimationYamlHelper.h  QEAnimationGraphAssetHelper.cpp  QEAnimationGraphAssetHelper.h  QEAnimationGraphEditorYamlHelper.h  QEProjectManager.cpp  QEProjectManager.h  QEShaderAsset.h  QEShaderYamlHelper.cpp  QEShaderYamlHelper.h  Reflectable.cpp  Reflectable.h  SanitizerHelper.h  glm_yaml_conversions.h
src/Draw/: CommandPoolModule.cpp  CommandPoolModule.h  QERenderTarget.h  RenderPassModule.cpp  RenderPassModule.h  SynchronizationModule.cpp
src/Editor/: EditorObject.cpp  EditorObject.h  EditorObjectManager.cpp  Grid.cpp  Grid.h
src/GUI/: GUIWindow.cpp  GUIWindow.h
src/GraphicsPipeline/: GraphicsPipelineData.h  GraphicsPipelineManager.cpp  GraphicsPipelineManager.h  GraphicsPipelineModule.cpp  GraphicsPipelineModule.h  PipelineModule.h  ReflectShader.cpp  ReflectShader.h  RenderLayer.h  RenderLayerModule.cpp  RenderLayerModule.h  RenderQueue.h  ShaderModule.cpp  ShaderModule.h  ShadowPipelineManager.h  ShadowPipelineModule.cpp  ShadowPipelineModule.h
src/Helpers/: MathHelpers.h  QEMemoryTrack.h  ScopedTimer.h
src/Input/: KeyboardController.cpp  KeyboardController.h
src/Logging/: IQELogSink.h  QEConsoleLogSink.h  QELogLevel.h  QELogger.h
src/Memory/: BufferManageModule.cpp  BufferManageModule.h  CSMDescriptorsManager.cpp  CSMDescriptorsManager.h  CSMResources.cpp  CSMResources.h  ComputeDescriptorBuffer.cpp  ComputeDescriptorBuffer.h  ComputeDescriptorModule.cpp  DescriptorBuffer.cpp  DescriptorBuffer.h  ImageMemoryTools.h  OmniShadowResources.cpp  OmniShadowResources.h  PointShadowDescriptorsManager.cpp  PointShadowDescriptorsManager.h  SpotShadowDescriptorsManager.h  SpotShadowResources.cpp  SpotShadowResources.h  TextureManagerModule.cpp  TextureManagerModule.h  UBO.h
src/Presentation/: AntiAliasingModule.cpp  AntiAliasingModule.h  DepthBufferModule.cpp  DepthBufferModule.h  ImageViewModule.h  SwapChainModule.cpp  SwapChainModule.h  SwapChainTool.hpp  WindowSurface.cpp
src/QuarantineEditor/: EditorObjectManager.cpp  Grid.cpp  Grid.h  main.cpp
src/QuarantineLauncher/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  QuarantineLauncher.csproj  QuarantineLauncher.sln  launcher.settings.json
src/RayTracing/: RayTracingModule.h
src/SetUp/: DeviceModule.cpp  DeviceModule.h  QueueFamiliesModule.h  QueueModule.h  VulkanLayerAndExtension.cpp
src/Templates/: QESingleton.h
(+895 files in other folders)
